--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,11 +9,10 @@
   </head>
   <body>
     <p class="odd-number">Number 1 - I'm a class!</p>
-    <div id="first-id">Number 2 - I'm one ID.</div>
-    <p class="odd-number" style="font-size: 24px">
-      Number 3 - I'm a class, but cooler!
-    </p>
-    <div id="second-id">Number 4 - I'm another ID.</div>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <!-- Added the class alt-font-size to both the lines below -->
+    <p class="odd-number alt-font-size"> Number 3 - I'm a class, but cooler!</p> 
+    <div id="four" class="alt-font-size">Number 4 - I'm another ID.</div>
     <p class="odd-number">Number 5 - I'm a class!</p>
   </body>
 </html>
